--- a/front-end/sidepanel.css
+++ b/front-end/sidepanel.css
@@ -10,6 +10,7 @@ ul {
   display: grid; /* グリッド表示にする */
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* グリッドの列を自動的に調整 */
   grid-gap: 50px; /* グリッドのギャップ（マージン）を設定 */
+  grid-auto-rows: repeat(1fr);
 }
   
 /* 各リストアイテムのスタイル */
@@ -17,6 +18,12 @@ li {
   margin-bottom: 10px; /* アイテム間のマージン */
   display: flex; /* フレックスボックスとして表示 */
   flex-direction: column; /* 子要素を縦方向に並べる */
+
+
+}
+.bookmark-item{
+  position: relative;
+  padding: 5px; /* パディングを追加 */
 }
   
 /* リンクのスタイル */
@@ -28,11 +35,6 @@ a {
   text-decoration: none; /* 下線を非表示 */
   border-radius: 5px; /* 角を丸める */
 }
-  
-  /* リンクにホバーしたときのスタイル */
-  a:hover {
-    background-color: #e0e0e0; /* 背景色を変更 */
-  }  
 
 
 .searchInput{
@@ -54,10 +56,6 @@ a {
   height: 30px;
 }
 
-/* リンクにホバーしたときのスタイル */
-a:hover {
-  background-color: #e0e0e0; /* 背景色を変更 */
-}
 
 /* ファビコンのスタイル */
 .favicon {
@@ -69,4 +67,11 @@ a:hover {
   position: absolute;
   left: 10px;
   top: 10px;
+}
+
+.edit-link{
+  position: absolute;
+  right: -25px;
+  top: 2px;
+  background-color: transparent;
 }
