--- a/front-end/sidepanel.css
+++ b/front-end/sidepanel.css
@@ -1,6 +1,6 @@
 body {
   margin: 0 30px; /* マージンをリセット */
-  background-color: #FDDDC9;
+  background-color: #2E436E;
 }
 
 ul {
@@ -31,8 +31,8 @@ li {
 a {
   display: block; /* ブロック要素として表示 */
   padding: 5px 10px; /* パディングを追加 */
-  background-color: #FCB98C; /* 背景色 */
-  color: #333; /* 文字色 */
+  background-color: #1E1F22; /* 背景色 */
+  color: whitesmoke; /* 文字色 */
   text-decoration: none; /* 下線を非表示 */
   border-radius: 5px; /* 角を丸める */
 }
@@ -54,9 +54,10 @@ a {
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: #8C5024;
-  color: #FDDDC9;
+  background-color: #1E1F22;
+  color: whitesmoke;
   height: 30px;
+  border-radius: 5px;
 }
 
 /* フォルダ作成 */
@@ -90,7 +91,3 @@ a {
   top: 2px;
   background-color: transparent;
 }
-
-
-
-
